<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:id="@+id/homeWindow"
    android:background="#ffffff"
    >

    <RelativeLayout
        android:id="@+id/PlayerInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.55" >

        <TextView
            android:id="@+id/UserInfoHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="TextView"
            android:layout_toRightOf="@id/myClubIcon"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/myClubIcon" />

        <TextView
            android:id="@+id/UserInfoHeader1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/myClubIcon"
            android:layout_below="@+id/UserInfoHeader"
            android:layout_toEndOf="@id/myClubIcon" />

        <ImageView
            android:id="@+id/myClubIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/hdrNextGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0E0E0E"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/nextGames"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="5sp"
        />

    <RelativeLayout
        android:id="@+id/NextGamesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/showNextGamesLayout"
                >

                <TableLayout
                    android:id="@+id/NextGamesTable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>


    <TextView
        android:id="@+id/proposalsHdr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Inbox"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="#0E0E0E"
        android:textColor="#FFFFFF"
        android:textSize="10sp"
        android:layout_margin="5sp"
        />

    <RelativeLayout
        android:id="@+id/MessagesBoxLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_weight="0.45"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/InboxLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TableLayout
                    android:id="@+id/InboxTable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                </TableLayout>

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/HomeButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6">

        <TableRow
            android:id="@+id/HomeButtonsTableRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/goRankings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0sp"
                android:text="@string/goRankings"
                android:padding="0sp"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/goToMyTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0sp"
                android:text="@string/goToMyTeam"
                android:padding="0sp"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/goToNextGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0sp"
                android:padding="0sp"
                android:text="@string/playNextGame"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/goToMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0sp"
                android:text="@string/goToMarket"
                android:padding="0sp"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"/>

        </TableRow>

    </RelativeLayout>

</LinearLayout>